LU-4832 ptlrpc: fix incorrect name string in nrs_tbf

Mismatched entry name strings between lproc entry creation
and lproc entry removal led to noisy warnings a umount time.
This fix corrects the code to use "nrs_tbf_rule" for both calls.

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: I806b87d4571fb307d8199628e00261162f0fa089
Reviewed-on: http://review.whamcloud.com/10241
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Li Xi <pkuelelixi@gmail.com>
Reviewed-by: Yang Sheng <yang.sheng@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>